test/e2e/data/chartmuseum/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum-service
spec:
  selector:
    app: chartmuseum
  type: NodePort
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chartmuseum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chartmuseum
  template:
    metadata:
      labels:
        app: chartmuseum
    spec:
      containers:
      - name: chartmuseum
        image: ghcr.io/helm/chartmuseum:v0.16.1
        ports:
        - containerPort: 8080
        env:
        - name: DEBUG
          value: "1"
        - name: STORAGE
          value: "local"
        - name: STORAGE_LOCAL_ROOTDIR
          value: "/charts"
        volumeMounts:
        - name: charts-volume
          mountPath: /charts
      volumes:
      - name: charts-volume
        hostPath:
          path: /tmp
