test/e2e/data/chartmuseum/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chart-museum-http
  namespace: default
spec:
  ingressClassName: ngrok # This ingress in intended to be used only with ngrok
  rules:
  - host: chart-museum.${RANCHER_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chartmuseum-service
            port:
              number: 8080
